--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,5 +16,5 @@ steps:
 
 - task: Bash@3
   inputs:
-    targetType: 'inline'
-    script: terraform init -backend-config='$(System.DefaultWorkingDirectory)/deployments/dev/versions.tf'
+    filePath: '$(System.DefaultWorkingDirectory)/deployments/dev/'
+    arguments: 'terraform init -backend-config='$(System.DefaultWorkingDirectory)/deployments/dev/versions.tf'
