--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,9 +15,13 @@ steps:
     scriptType: bash
     scriptLocation: inlineScript
     inlineScript: |
-      az --version
-      az account show
+      echo "##vso[task.setvariable variable=ARM_CLIENT_ID]$servicePrincipalId" 
+     
+      echo "##vso[task.setvariable variable=ARM_CLIENT_SECRET]$servicePrincipalKey"
+    
+      echo "##vso[task.setvariable variable=ARM_TENANT_ID]$tenantId"
     addSpnToEnvironment: true
+
 - task: charleszipp.azure-pipelines-tasks-terraform.azure-pipelines-tasks-terraform-installer.TerraformInstaller@0
   inputs:
     terraformVersion: '1.4.2'
@@ -27,7 +31,7 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-
+      az login --service-principal --username $(ARM_CLIENT_ID) --password $(ARM_CLIENT_SECRET)  --tenant $(ARM_TENANT_ID)
       cd $(System.DefaultWorkingDirectory)/deployments/dev/
       terraform init -reconfigure
     displayName: 'Terraform init'  
