--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,8 @@ steps:
       echo "##vso[task.setvariable variable=ARM_CLIENT_SECRET]$servicePrincipalKey"
     
       echo "##vso[task.setvariable variable=ARM_TENANT_ID]$tenantId"
+
+      echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$subscription"
     addSpnToEnvironment: true
 
 - task: charleszipp.azure-pipelines-tasks-terraform.azure-pipelines-tasks-terraform-installer.TerraformInstaller@0
@@ -31,7 +33,7 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      az login --service-principal --username $(ARM_CLIENT_ID) --password $(ARM_CLIENT_SECRET)  --tenant $(ARM_TENANT_ID)
+      az login --service-principal --username $(ARM_CLIENT_ID) --password $(ARM_CLIENT_SECRET)  --tenant $(ARM_TENANT_ID) --subscription $(ARM_SUBSCRIPTION_ID)
       cd $(System.DefaultWorkingDirectory)/deployments/dev/
       terraform init -reconfigure
     displayName: 'Terraform init'  
