made changes to pipe

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,8 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      az login --service-principal --username $(ARM_CLIENT_ID) --password $(ARM_CLIENT_SECRET)  --tenant $(ARM_TENANT_ID) --subscription $(ARM_SUBSCRIPTION_ID)
+      az login --service-principal --username $(ARM_CLIENT_ID) --password $(ARM_CLIENT_SECRET)  --tenant $(ARM_TENANT_ID)
+      az account set --subscription $(subscription)
       cd $(System.DefaultWorkingDirectory)/deployments/dev/
       terraform init -reconfigure
     displayName: 'Terraform init'  
