--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
     targetType: 'inline'
     script: |
       az login --service-principal --username $(ARM_CLIENT_ID) --password $(ARM_CLIENT_SECRET)  --tenant $(ARM_TENANT_ID)
-      az account set --subscription $(subscription)
+      az account set --subscription $(ARM_SUBSCRIPTION_ID)
       cd $(System.DefaultWorkingDirectory)/deployments/dev/
       terraform init -reconfigure
     displayName: 'Terraform init'  
