made changes to pipe

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
     
       echo "##vso[task.setvariable variable=ARM_TENANT_ID]$tenantId"
 
-      echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$subscription"
+      echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$(subscription)"
     addSpnToEnvironment: true
 
 - task: charleszipp.azure-pipelines-tasks-terraform.azure-pipelines-tasks-terraform-installer.TerraformInstaller@0
@@ -39,7 +39,7 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      echo $(ARM_SUBSCRIPTION_ID)
+      az account set --subscription ARM_SUBSCRIPTION_ID
       az login --service-principal --username $(ARM_CLIENT_ID) --password $(ARM_CLIENT_SECRET)  --tenant $(ARM_TENANT_ID)
       cd $(System.DefaultWorkingDirectory)/deployments/dev/
       terraform init -reconfigure
