--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,8 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      az account set --subscription $(ARM_SUBSCRIPTION_ID)
+      echo $(ARM_SUBSCRIPTION_ID)
+      az account set --subscription "${ARM_SUBSCRIPTION_ID}"
       az login --service-principal --username $(ARM_CLIENT_ID) --password $(ARM_CLIENT_SECRET)  --tenant $(ARM_TENANT_ID)
       cd $(System.DefaultWorkingDirectory)/deployments/dev/
       terraform init -reconfigure
