--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ variables:
 steps:
 
 - task: AzureCLI@2
-  displayName: Azure CLI
+  displayName: Azure CLI 
   inputs:
     azureSubscription: $(subscription)
     scriptType: bash
@@ -17,23 +17,34 @@ steps:
     inlineScript: |
       
       echo "##vso[task.setvariable variable=ARM_CLIENT_ID]$servicePrincipalId" 
-     
       echo "##vso[task.setvariable variable=ARM_CLIENT_SECRET]$servicePrincipalKey"
+      echo "##vso[task.setvariable variable=ARM_TENANT_ID]$tenantId"
+      echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$subscription"
+     
+    addSpnToEnvironment: true
+
+- task: AzureCLI@2
+  displayName: Azure CLI number 2
+  inputs:
+    azureSubscription: $(subscription)
+    scriptType: bash
+    scriptLocation: inlineScript
+    inlineScript: |
+      az login --service-principal --username $(ARM_CLIENT_ID) --password $(ARM_CLIENT_SECRET)  --tenant $(ARM_TENANT_ID)
       
       az account show
       echo subscriptionId=$(az account show --query 'id' -o tsv)
-      echo tenantId=$(az account show --query 'tenantId' -o tsv)
       
-      az login --service-principal --username $(ARM_CLIENT_ID) --password $(ARM_CLIENT_SECRET)  --tenant $(tenantId)
+      
       az account set --subscription "$(subscriptionId)"
       
      
     addSpnToEnvironment: true
 
-
 - task: Bash@3
   inputs:
     filePath: '$(System.DefaultWorkingDirectory)/scripts/get_remote_state_sas_key.sh'
+
 #- task: charleszipp.azure-pipelines-tasks-terraform.azure-pipelines-tasks-terraform-installer.TerraformInstaller@0
 #  inputs:
 #    terraformVersion: '1.4.2'
