--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
       echo "##vso[task.setvariable variable=ARM_CLIENT_ID]$servicePrincipalId" 
       echo "##vso[task.setvariable variable=ARM_CLIENT_SECRET]$servicePrincipalKey"
       echo "##vso[task.setvariable variable=ARM_TENANT_ID]$tenantId"
-      echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$subscription"
+      echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$subscription
      
     addSpnToEnvironment: true
 
@@ -33,10 +33,10 @@ steps:
       az login --service-principal --username $(ARM_CLIENT_ID) --password $(ARM_CLIENT_SECRET)  --tenant $(ARM_TENANT_ID)
       
       az account show
-      echo subscriptionId=$(az account show --query 'id' -o tsv)
+      subscriptionId=$(az account show --query 'id' -o tsv)
       
       
-      az account set --subscription "$(subscriptionId)"
+      az account set --subscription "$subscriptionId"
       
      
     addSpnToEnvironment: true
