--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
       echo "##vso[task.setvariable variable=ARM_CLIENT_ID]$servicePrincipalId" 
       echo "##vso[task.setvariable variable=ARM_CLIENT_SECRET]$servicePrincipalKey"
       echo "##vso[task.setvariable variable=ARM_TENANT_ID]$tenantId"
-      echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$subscription
+      echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$subscription"
      
     addSpnToEnvironment: true
 
