--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ steps:
 
 - task: Bash@3
   inputs:
-    filePath: '''$(System.DefaultWorkingDirectory)/scripts/get_remote_state_sas_key.sh'''
+    filePath: '$(System.DefaultWorkingDirectory)/scripts/get_remote_state_sas_key.sh'
     arguments: 'enmltfstatedevsawe tfstate'
 #- task: charleszipp.azure-pipelines-tasks-terraform.azure-pipelines-tasks-terraform-installer.TerraformInstaller@0
 #  inputs:
