--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,6 +40,7 @@ steps:
   inputs:
     azureSubscription: $(subscription)
     scriptType: bash
+    scriptLocation: inlineScript
     inlineScript: |
       terraform init
     addSpnToEnvironment: true
