--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ steps:
     scriptType: bash
     scriptLocation: inlineScript
     inlineScript: |
-      terraform plan 
+      terraform plan var-file=$(System.DefaultWorkingDirectory)/deployments/dev/dev.tfvars
     addSpnToEnvironment: true   
 
 - task: AzureCLI@2
