--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,19 +9,6 @@ variables:
 steps:
 
 - task: AzureCLI@2
-  displayName: Azure CLI 
-  inputs:
-    azureSubscription: $(subscription)
-    scriptType: bash
-    scriptLocation: inlineScript
-    inlineScript: |
-      echo "##vso[task.setvariable variable=ARM_CLIENT_ID]$servicePrincipalId" 
-      echo "##vso[task.setvariable variable=ARM_CLIENT_SECRET]$servicePrincipalKey"
-      echo "##vso[task.setvariable variable=ARM_TENANT_ID]$tenantId"
-      echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$subscription"
-    addSpnToEnvironment: true
-
-- task: AzureCLI@2
   displayName: 'Azure CLI get_remote_state_sas_key.sh'
   inputs:
     azureSubscription: $(subscription)
@@ -40,7 +27,7 @@ steps:
   inputs:
     azureSubscription: $(subscription)
     scriptType: bash
-    scriptLocation: inlineScript
+    scriptLocation: $(System.DefaultWorkingDirectory)/deployments/dev
     inlineScript: |
       terraform init -reconfigure
     addSpnToEnvironment: true
@@ -50,7 +37,7 @@ steps:
   inputs:
     azureSubscription: $(subscription)
     scriptType: bash
-    scriptLocation: inlineScript
+    scriptLocation: $(System.DefaultWorkingDirectory)/deployments/dev
     inlineScript: |
       terraform plan -var-file=$(System.DefaultWorkingDirectory)/deployments/dev/dev.tfvars
     addSpnToEnvironment: true
@@ -60,7 +47,7 @@ steps:
   inputs:
     azureSubscription: $(subscription)
     scriptType: bash
-    scriptLocation: inlineScript
+    scriptLocation: $(System.DefaultWorkingDirectory)/deployments/dev
     inlineScript: |
       terraform apply 
     addSpnToEnvironment: true   
