made changes to pipe

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ steps:
     command: 'init'
     backendConfig: 'versions.tf'
     workingDirectory: '$(System.DefaultWorkingDirectory)/deployments/dev'
+    environmentServiceNameAzureRM: '$(subscription)'
     # backendServiceArm: '$(subscription)'
     # backendAzureRmResourceGroupName: "en-mltfstate-dev-rg-we"
     # backendAzureRmStorageAccountName: "enmltfstatedevsawe"
